# kenning-pipeline-manager-backend-communication

./: README.md  pyproject.toml  setup.py
kenning_pipeline_manager_backend_communication/: __init__.py  communication_backend.py  misc_structures.py
pipeline_manager_backend_communication/: __init__.py  communication_backend.py  json_rpc_base.py  misc_structures.py  utils.py
