# Copyright (c) 2022-2023 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline_manager_backend_communication"
version = "0.1"
description = "General purpose TCP communication backend"
authors = [
    {name = "Antmicro Ltd.", email = "contact@antmicro.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
readme = "README.md"
dependencies = [
    "json-rpc==1.15.0",
]

[project.optional-dependencies]
pipeline-manager = [
    "pipeline-manager @ git+https://github.com/antmicro/kenning-pipeline-manager.git",
]

[project.urls]
repository = "https://github.com/antmicro/kenning-pipeline-manager-backend-communication"

[tool.setuptools.packages.find]
include = [
    "pipeline_manager_backend_communication*"
]
namespaces = false

